Resolve an issue where the title is too long to be processed when the notification has an icon.

--- a/styles/notification.less
+++ b/styles/notification.less
@@ -57,6 +57,10 @@
     }
   }
 
+  &-notify &-title-with-icon {
+    .ellipsis;
+  }
+
   // Description
   &-notify &-description {
     color: @notify-description-color;
